Try to fix height of accordian on mobile

--- a/sass/visuals/_accordian.sass
+++ b/sass/visuals/_accordian.sass
@@ -11,7 +11,7 @@
     display: none
   input:checked
     ~ .col,~ .row
-      height: auto
+      height: initial
   input:checked + label:after
     content: '\25b2'
   label
